# dee-blogger.github.io

./: .gitignore  README.md  build  build-for-mypal-windows-xp.sh  build.sh
.github/workflows/: build-blog.yml  build.yml
content/: 2025-05-28-256gb-ram.md  2025-06-01-guix-packages.md  2025-06-08-phoenix-liveview-vs-javascript.md  2025-06-13-kubernetes-for-beginners.md  2025-06-19-command-line-productivity-tips.md  2025-06-27-caching-strategies-for-web-apps.md  2025-06-28-scalability-planning.md  2025-06-30-scalability-planning.md  2025-07-01-understanding-memory-management-in-rust.md  2025-07-03-container-security-guidelines.md  2025-07-03-technical-debt-management.md  2025-07-12-monitoring-and-observability.md  2025-07-13-open-source-contribution-guide.md  2025-07-18-writing-better-error-messages.md  2025-07-19-event-driven-architecture.md  2025-08-05-remote-work-for-developers.md  2025-08-12-logging-best-practices.md  2025-08-19-event-driven-architecture.md  2025-08-22-caching-strategies-for-web-apps.md  2025-08-22-debugging-techniques-for-production.md  2025-08-26-restful-api-best-practices.md  2025-08-29-software-architecture-decisions.md  2025-08-31-understanding-tcp-ip-networking.md  2025-09-05-restful-api-best-practices.md  2025-09-07-error-handling-patterns.md  2025-09-09-why-docker-containers-are-overrated.md  2025-09-23-secure-coding-best-practices.md  2025-09-27-devops-culture-and-practices.md  2025-10-13-command-line-productivity-tips.md  2025-10-15-why-docker-containers-are-overrated.md  2025-10-23-javascript-fatigue-is-real.md  2025-10-25-database-migration-strategies.md  2025-10-25-graphql-vs-rest-comparison.md  2025-10-27-infrastructure-as-code-benefits.md  2025-10-28-api-design-principles.md  2025-10-30-code-quality-metrics.md  2025-11-06-security-by-design.md  2025-11-08-software-architecture-decisions.md  2025-11-11-clean-architecture-patterns.md  2025-11-12-graphql-vs-rest-comparison.md  (+309 more)
src/blog_content/posts/: 2025-05-25-static-vs-surveillance.md  2025-06-05-libreboot.md  2025-06-07-guix-blog.md  2025-06-11-agile-development-practices.md  2025-06-18-understanding-tcp-ip-networking.md  2025-06-19-code-documentation-guidelines.md  2025-06-21-performance-profiling-tools.md  2025-06-23-api-design-principles.md  2025-06-25-event-driven-architecture.md  2025-06-27-understanding-tcp-ip-networking.md  2025-07-01-technical-debt-management.md  2025-07-04-devops-culture-and-practices.md  2025-07-06-javascript-fatigue-is-real.md  2025-07-07-design-patterns-in-practice.md  2025-07-11-debugging-techniques-for-production.md  2025-07-15-continuous-integration-pipelines.md  2025-07-19-clean-architecture-patterns.md  2025-07-21-building-cli-tools-with-go.md  2025-07-24-code-quality-metrics.md  2025-07-25-design-patterns-in-practice.md  2025-07-25-logging-best-practices.md  2025-07-27-continuous-integration-pipelines.md  2025-07-28-agile-development-practices.md  2025-07-30-understanding-memory-management-in-rust.md  2025-08-08-why-docker-containers-are-overrated.md  2025-08-10-container-security-guidelines.md  2025-08-14-understanding-memory-management-in-rust.md  2025-08-15-open-source-contribution-guide.md  2025-08-18-logging-best-practices.md  2025-08-20-monitoring-and-observability.md  2025-09-01-infrastructure-as-code-benefits.md  2025-09-03-scalability-planning.md  2025-09-04-agile-development-practices.md  2025-09-04-writing-better-error-messages.md  2025-09-10-security-by-design.md  2025-09-19-version-control-strategies.md  2025-09-25-minimal-linux-distributions-compared.md  2025-10-01-agile-development-practices.md  2025-10-01-secure-coding-best-practices.md  2025-10-02-why-docker-containers-are-overrated.md  (+321 more)
src/blog_content/static/css/: post.css.source  shared.css.source
src/blog_content/static/js/: search-logic.js.source
src/blog_content/templates/: archive.html.template.html  index.html.template.html  post.html.template.html
src/builder_tools/: CMakeLists.txt  clean_public.cpp  common_utils.cpp  common_utils.h  copy_static.cpp  generate_pages.cpp  generate_search.cpp  process_markdown.cpp
